updated initial data for tests

--- a/HW_MD.ipynb
+++ b/HW_MD.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9059357f24d44a66b178d18b37324c85",
+       "model_id": "69bbe54f9a9b4c1da27be202cb05b2d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[12:03:42] WARNING: not removing hydrogen atom with dummy atom neighbors\n",
+      "[16:45:09] WARNING: not removing hydrogen atom with dummy atom neighbors\n",
       "INFO:polymerist.smileslib.functgroups:Loading functional group SMARTS data from LUT\n"
      ]
     }
@@ -83,16 +83,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'NoneType' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m working_dir \u001b[38;5;241m=\u001b[39mPath(cwd\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/HW_35_original\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mmkdir(parents\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      7\u001b[0m mol_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHW_35m\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 9\u001b[0m pdb_path \u001b[38;5;241m=\u001b[39m \u001b[43massemble_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworking_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmol_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextension\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpdb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[1;32m     10\u001b[0m sdf_path \u001b[38;5;241m=\u001b[39m assemble_path(working_dir, mol_name, extension\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msdf\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[1;32m     11\u001b[0m inc_path \u001b[38;5;241m=\u001b[39m assemble_path(working_dir, mol_name, extension\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpkl\u001b[39m\u001b[38;5;124m'\u001b[39m) \n",
+      "File \u001b[0;32m~/polymerist/polymerist/genutils/fileutils/pathutils.py:29\u001b[0m, in \u001b[0;36massemble_path\u001b[0;34m(directory, prefix, extension, postfix)\u001b[0m\n\u001b[1;32m     26\u001b[0m     extension \u001b[38;5;241m=\u001b[39m extension[\u001b[38;5;241m1\u001b[39m:] \u001b[38;5;66;03m# remove leading dots if included\u001b[39;00m\n\u001b[1;32m     27\u001b[0m path_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39mpostfix\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mpostfix\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mextension\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mdirectory\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mpath_name\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'NoneType' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from polymerist.genutils.fileutils.pathutils import assemble_path\n",
-    "\n",
-    "\n",
-    "working_dir = Path('/home/bamo6610/Documents/openff-dev/HW_openMM/') # can change this to wherever your files are\n",
-    "mol_name = 'HW_3m_JC'\n",
+    "import os\n",
+    "cwd=os.getcwd()\n",
+    "working_dir =Path(cwd+'/HW_35_original').mkdir(parents=True, exist_ok=True)\n",
+    "mol_name = 'HW_35m'\n",
     "\n",
     "pdb_path = assemble_path(working_dir, mol_name, extension='pdb') \n",
     "sdf_path = assemble_path(working_dir, mol_name, extension='sdf') \n",
@@ -185,7 +198,7 @@
     "    with inc_path.open('rb') as file:\n",
     "        inc  = pickle.load(file)\n",
     "else:\n",
-    "    ff = ForceField('openff-2.0.0.offxml', 'tip3p.offxml') # load generic Sage + TIP3P force fields\n",
+    "    ff = ForceField('openff-2.1.0.offxml', 'tip3p.offxml') # load generic Sage + TIP3P force fields\n",
     "    inc = ff.create_interchange(topology=offtop, toolkit_registry=TKREGS['OpenEye Toolkit']) # convert to interchange for export\n",
     "    inc.box = boxvectors.get_topology_bbox(offtop)\n",
     "\n",
