--- a/hw.ipynb
+++ b/hw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,28 +103,36 @@
     "\n",
     "    return Cmax\n",
     "\n",
-    "Cmax_target = 3 * molar\n",
+    "Cmax_target = 3.5 * molar\n",
     "\n",
     "def Cmax_for_roots(k : float) -> float:\n",
     "    return calc_C_max_from_spring_const(\n",
     "        k * kilojoule_per_mole/nanometer**2,\n",
     "        box_dims=np.array([48.0, 48.0, 144.0]) * angstrom,\n",
-    "        N_ions=188,\n",
+    "        N_ions=217,\n",
     "        T=300*kelvin\n",
     "    ) - Cmax_target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated force constant:  [0.76829653] \n",
+      "Estimated force constant:  [0.78490787] \n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bamo6610/miniconda3/envs/calculus/lib/python3.10/site-packages/openmm/unit/quantity.py:414: RuntimeWarning: divide by zero encountered in reciprocal\n",
+      "  return self * pow(other, -1.0)\n"
      ]
     }
    ],
@@ -135,22 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cmax from spring constant:  2.99999999441231 M\n"
+      "Cmax from spring constant:  3.500000000840718 M\n"
      ]
     }
    ],
    "source": [
     "Cmax = calc_C_max_from_spring_const(\n",
-    "    k=0.76829653 * kilojoule_per_mole/nanometer**2,\n",
+    "    k=0.78490787 * kilojoule_per_mole/nanometer**2,\n",
     "    box_dims=np.array([48.0, 48.0, 144.0]) * angstrom,\n",
-    "    N_ions=188,\n",
+    "    N_ions=217,\n",
     "    T=300*kelvin\n",
     ")\n",
     "print('Cmax from spring constant: ',Cmax)"
@@ -158,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cmax for root:  2.99999999441231 M\n"
+      "Cmax for root:  3.462765950997187 M\n"
      ]
     }
    ],
